@@ -2,6 +2,7 @@ import com.example.Cat;
 import com.example.Feline;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static junit.framework.Assert.assertEquals;
@@ -18,7 +19,7 @@ public class CatTest {
     @Test
     public void testGetFood() throws Exception {
         Feline mockFeline = mock(Feline.class);
-        when(mockFeline.eatMeat()).thenReturn(List.of("Животные", "Птицы", "Рыба"));
+        when(mockFeline.eatMeat()).thenReturn(Arrays.asList("Животные", "Птицы", "Рыба"));
 
         Cat cat = new Cat(mockFeline);
         List<String> food = cat.getFood();
